--- a/DotNetCore/MVC/MyWebApp/Views/Product/Add.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/Add.cshtml
@@ -12,8 +12,13 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Add">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+
+            <div asp-validation-summary="ModelOnly" class="text-danger">
+                </div>
+
+            <span class="text-danger"><b>@ViewBag.errormessage</b></span>
+            <br /><br />
+
             <div class="form-group">
                 <label asp-for="ProductName" class="control-label">Product Name</label>
                 <input asp-for="ProductName" class="form-control" />
