Added view bag in add and update action in product to  show a successful message in the index

--- a/DotNetCore/MVC/MyWebApp/Views/Product/DeleteSuccess.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/DeleteSuccess.cshtml
@@ -5,4 +5,4 @@
 <div class="text-center">
     <h2 class="display-4">Delete Suceess</h2>
 </div>
-<b><a href="http://localhost:5277/Product/GetAll"> Back Home </a></b>
+<b><a href="http://localhost:5277/Product/Index"> Back Home </a></b>
