--- a/DotNetCore/MVC/MyWebApp/Views/Product/Edit.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/Edit.cshtml
@@ -6,6 +6,10 @@
     <div class="col-md-4">
         <form asp-action="Update">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <span class="text-danger"><b>@ViewBag.errormessage</b></span>
+            <br /><br />
+
             <div class="form-group">
                 <label style="visibility:hidden;" asp-for="Id" class="control-label"></label>
                 <input style="visibility:hidden;" asp-for="Id" class="form-control" />
