--- a/DotNetCore/MVC/MyWebApp/Views/Product/Update.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/Update.cshtml
@@ -12,6 +12,13 @@
     <div class="col-md-4">
         <form asp-action="Update">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <br/>
+            <div class="form-group">
+                <input type="submit" value="Update" class="btn btn-primary" />
+            </div>
+            <br />
+            <a href="http://localhost:5277/Product/Index"> Back Home </a>
+            <br/>
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" />
@@ -61,9 +68,6 @@
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Update" class="btn btn-primary" />
             </div>
         </form>
     </div>
