--- a/DotNetCore/MVC/MyWebApp/Views/Product/UpdateSuccess.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/UpdateSuccess.cshtml
@@ -4,6 +4,7 @@
 
 <div class="text-center">
     <h2 class="display-4">Product Update suceess</h2>
+    @ViewBag.productCount
 </div>
 
 <a href="http://localhost:5277/Product/GetAll"> BackHome </a>
