--- a/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
@@ -74,7 +74,7 @@
                 <td></td>
             </tr>
         </table>
-        <a href="http://localhost:5277/Product/GetAll"> Back Home </a>
+        <a href="http://localhost:5277/Product/Index"> Back Home </a>
     </form>
 </body>
 
