--- a/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="GetAllCustomers">Customer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="GetAll">Product</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                         </li>
                     </ul>
                 </div>
