--- a/DotNetCore/MVC/MyWebApp/Views/Customer/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/View.cshtml
@@ -48,7 +48,7 @@
             </tr>
             <tr>
                 <td><b>Email:</b></td>
-                <td><a href="http://localhost:5277/Customer/GetAllCustomers">@Model.Email</a></td>
+                <td><a href="http://localhost:5277/Customer/Index">@Model.Email</a></td>
             </tr>
             <tr>
                 <td><b>Age:</b></td>
@@ -62,7 +62,7 @@
                 <td></td>
             </tr>
         </table>
-            <a href="http://localhost:5277/Customer/GetAllCustomers"> Back Home </a>
+        <a href="http://localhost:5277/Customer/Index"> Back Home </a>
     </form>
 </body>
 
