--- a/DotNetCore/MVC/MyWebApp/Views/Product/Index.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/Index.cshtml
@@ -10,13 +10,10 @@
 </head>
 <br/>
 <h1><span class="blue">&lt;</span>Product<span class="blue">&gt;</span> <span class="yellow">Table</pan></h1>
-<br/>
 <br />
 <span class="text-success"> <b> @ViewBag.SuccessMessageForAdd </b> </span>
 <br />
-<br />
 <span class="text-success"> <b> @ViewBag.SuccessMessageForUpdate </b> </span>
-<br />
 <br/>
 <div>
     <b><b><a href="http://localhost:5277/Product/Add"> Add </a></b></b>
@@ -151,10 +148,10 @@
                 <td><b>Product Name</b></td>
                 <td><b>Brand Name</b></td>
                 <td><b>Size</b></td>
-                <td><b>ColorName</b></td>
+                <td><b>Color Name</b></td>
                 <td><b>Fit</b></td>
-                <td><b>Fabric</b></td>
-                <td><b>Category</b></td>
+                <td><b>Fabric Name</b></td>
+                <td><b>Category Name</b></td>
                 <td><b>Discount</b></td>
                 <td><b>Price</b></td>
                 <td><b>Action</b></td>
@@ -168,8 +165,8 @@
                     <td><b>@product.SizeName</b></td>
                     <td><b>@product.ColorName</b></td>
                     <td><b>@product.Fit</b></td>
-                    <td><b>@product.Fabric</b></td>
-                    <td><b>@product.Category</b></td>
+                    <td><b>@product.FabricName</b></td>
+                    <td><b>@product.CategoryName</b></td>
                     <td><b>@product.Discount</b></td>
                     <td><b>@product.Price</b></td>
                     <td>
