--- a/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
@@ -55,12 +55,12 @@
                 <td>@Model.Fit</td>
             </tr>
             <tr>
-                <td><b>Fabric:</b></td>
-                <td>@Model.Fabric</td>
+                <td><b>Fabric Name:</b></td>
+                <td>@Model.FabricName</td>
             </tr>
             <tr>
-                <td><b>Category:</b></td>
-                <td>@Model.Category</td>
+                <td><b>Category Name:</b></td>
+                <td>@Model.CategoryName</td>
             </tr>
             <tr>
                 <td><b>Discount:</b></td>
