--- a/DotNetCore/MVC/MyWebApp/Views/Customer/Edit.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/Edit.cshtml
@@ -57,8 +57,8 @@
             <label for="Mobile">Mobile:</label><br>
             <input type="text" id="Mobile" name="Mobile" value="@Model.Mobile"><br><br>
 
-            <input type="submit" value="Submit">
-            <input type="reset">
+            <input type="submit" value="Update">
+            <input type="Cancel">
         </form>
 
     </table>
