--- a/DotNetCore/MVC/MyWebApp/Views/Product/Add.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/Add.cshtml
@@ -33,13 +33,13 @@
             <br/>
             <div class="form-group">
                 <label for="Product Size">Product Size</label>
-                @Html.DropDownListFor(model => model.SizeId, ViewBag.ProductSizes as SelectList, "-- Select Size --", new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.SizeId, ViewBag.ProductSizes as SelectList, "-- Select --", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SizeId, "", new { @class = "text-danger" })
             </div>
             <br/>
             <div class="form-group">
                 <label for="Product Color">Product Color</label>
-                @Html.DropDownListFor(model => model.ColorId, ViewBag.ProductColors as SelectList, "-- Select Color --", new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.ColorId, ViewBag.ProductColors as SelectList, "-- Select --", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ColorId, "", new { @class = "text-danger" })
             </div>
             <br/>
@@ -49,20 +49,23 @@
                 <span asp-validation-for="Fit" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Fabric" class="control-label"></label>
-                <input asp-for="Fabric" class="form-control" />
-                <span asp-validation-for="Fabric" class="text-danger"></span>
+                <label asp-for="FabricName" class="control-label">Fabric Name</label>
+                @Html.DropDownListFor(model => model.FabricId, ViewBag.ProductFabrics as SelectList, "-- Select --", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.FabricId, "", new { @class = "text-danger" })
             </div>
+            <br/>
             <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
-                <input asp-for="Category" class="form-control" />
-                <span asp-validation-for="Category" class="text-danger"></span>
+                <label asp-for="CategoryName" class="control-label">Category Name</label>
+                @Html.DropDownListFor(model => model.CategoryId, ViewBag.ProductCategories as SelectList, "-- Select --", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
             </div>
+            <br/>
             <div class="form-group">
                 <label asp-for="Discount" class="control-label"></label>
                 <input asp-for="Discount" class="form-control" />
                 <span asp-validation-for="Discount" class="text-danger"></span>
             </div>
+            <br/>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
