Added enums class in product and show delete success message in ui

--- a/DotNetCore/MVC/MyWebApp/Views/Product/Index.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/Index.cshtml
@@ -15,6 +15,9 @@
 <br />
 <span class="text-success"> <b> @ViewBag.SuccessMessageForUpdate </b> </span>
 <br/>
+<br />
+<span class="text-success"> <b> @ViewBag.SuccessMessageForDelete </b> </span>
+<br />
 <div>
     <b><b><a href="http://localhost:5277/Product/Add"> Add </a></b></b>
 </div>
