--- a/DotNetCore/MVC/MyWebApp/Views/Customer/Index.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/Index.cshtml
@@ -16,6 +16,9 @@
 <br />
 <span class="text-success"> <b> @ViewBag.SuccessMessageForUpdate </b> </span>
 <br />
+<br />
+<span class="text-success"> <b> @ViewBag.SuccessMessageForDelete </b> </span>
+<br />
 <div>
     <a href="http://localhost:5277/Customer/Register"> Register </a>
 </div>
