--- a/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
@@ -32,6 +32,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                         </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
+                        </li>
                     </ul>
                 </div>
             </div>
