--- a/DotNetCore/MVC/MyWebApp/Views/Employee/Add.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Employee/Add.cshtml
@@ -26,6 +26,15 @@
             </div>
 
         </br>
+            
+            <div class="form-group">
+
+                <label for="Email" class="control-label">Email</label>
+                <input type="Text" id="Email" name="Email" class="form-control" new { required="required" } />
+                <span asp-validation-for="Email" class="text-danger"></span>
+
+            </div>
+        </br>
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
