Added a new actors table in database and used temp data instead of view bag

--- a/DotNetCore/MVC/MyWebApp/Views/Movie/Add.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Movie/Add.cshtml
@@ -32,6 +32,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back To Home</a>
+    <a href="http://localhost:5277/Movie/Index"> <b>Back To Home</b> </a>
 </div>
 
