--- a/DotNetCore/MVC/MyWebApp/Views/Movie/Index.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Movie/Index.cshtml
@@ -9,7 +9,8 @@
     <title>Movie Table</title>
 </head>
 </br>
-<span class="text-success"> <b> @ViewBag.SuccessMessageForAdd </b> </span>
+@*<span class="text-success"> <b> @ViewBag.SuccessMessageForAdd </b> </span>*@
+<span class="text-success"> <b> @TempData["SuccessMessageForAdd"] </b> </span>
 <br />
 <div>
     <a href="http://localhost:5277/Movie/Add"> <b>Add</b> </a>
