--- a/DotNetCore/MVC/MyWebApp/Views/Movie/Add.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Movie/Add.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Add">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <d  iv asp-validation-summary="ModelOnly" class="text-danger"></d>
             <div class="form-group">
                 <label class="control-label">Movie Name</label>
                 <input type="Text" id="MovieName" name="MovieName" class="form-control" new { required="required" } />
