Added a new action update in movie controller

--- a/DotNetCore/MVC/MyWebApp/Views/Movie/Index.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Movie/Index.cshtml
@@ -13,6 +13,8 @@
 <span class="text-success"> <b> @TempData["SuccessMessageForAdd"] </b> </span>
 
 <span class="text-success"> <b> @TempData["SuccessMessageForDelete"] </b> </span>
+
+<span class="text-success"> <b> @TempData["SuccessMessageForUpdate"] </b> </span>
 <br />
 <div>
     <a href="http://localhost:5277/Movie/Add"> <b>Add</b> </a>
