--- a/DotNetCore/MVC/MyWebApp/Views/Movie/Edit.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Movie/Edit.cshtml
@@ -4,12 +4,12 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="update">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
                 <label style="visibility:hidden;" class="control-label"></label>
-                <input style="visibility:hidden;" class="form-control" >
+                <input style="visibility:hidden;" id="id" name="id" value="@Model.Id" class="form-control">
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
 
