Added a view action in movie where in html  i have linked moviename for show  movie details in ui

--- a/DotNetCore/MVC/MyWebApp/Views/Movie/Index.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Movie/Index.cshtml
@@ -17,9 +17,129 @@
 <span class="text-success"> <b> @TempData["SuccessMessageForUpdate"] </b> </span>
 <br />
 <div>
-    <a href="http://localhost:5277/Movie/Add"> <b>Add</b> </a>
+    <b><b><a href="http://localhost:5277/Movie/Add"> Add </a></b></b>
 </div>
 <br />
+<style>
+    
+    body {
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 300;
+        line-height: 1.42em;
+        color: #A7A1AE;
+        background-color: aliceblue;
+    }
+
+    h1 {
+        font-size: 3em;
+        font-weight: 300;
+        line-height: 1em;
+        text-align: center;
+        color: #4DC3FA;
+    }
+
+    h2 {
+        font-size: 1em;
+        font-weight: 300;
+        text-align: center;
+        display: block;
+        line-height: 1em;
+        padding-bottom: 2em;
+        color: #FB667A;
+    }
+
+        h2 a {
+            font-weight: 700;
+            text-transform: uppercase;
+            color: #FB667A;
+            text-decoration: none;
+        }
+
+    .blue {
+        color: #185875;
+    }
+
+    .yellow {
+        color: #FFF842;
+    }
+
+    .container th h1 {
+        font-weight: bold;
+        font-size: 1em;
+        text-align: left;
+        color: #185875;
+    }
+
+    .container td {
+        font-weight: normal;
+        font-size: 1em;
+        -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+        -moz-box-shadow: 0 2px 2px -2px #0E1119;
+        box-shadow: 0 2px 2px -2px #0E1119;
+    }
+
+    .container {
+        text-align: left;
+        overflow: hidden;
+        width: 80%;
+        margin: 0 auto;
+        display: table;
+        padding: 0 0 8em 0;
+    }
+
+        .container td, .container th {
+            padding-bottom: 2%;
+            padding-top: 2%;
+            padding-left: 2%;
+        }
+
+    / Background-color of the odd rows /
+    .container tr:nth-child(odd) {
+        background-color: aliceblue;
+    }
+
+    / Background-color of the even rows /
+    .container tr:nth-child(even) {
+        background-color: aliceblue;
+    }
+
+    .container th {
+        background-color: aliceblue;
+    }
+
+    .container td:first-child {
+        color: #FB667A;
+    }
+
+    .container tr:hover {
+        background-color: aliceblue;
+        -webkit-box-shadow: 0 6px 6px -6px #0E1119;
+        -moz-box-shadow: 0 6px 6px -6px #0E1119;
+        box-shadow: 0 6px 6px -6px #0E1119;
+    }
+
+    .container td:hover {
+        background-color: #FFF842;
+        color: #403E10;
+        font-weight: bold;
+        box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
+        transform: translate3d(6px, -6px, 0);
+        transition-delay: 0s;
+        transition-duration: 0.4s;
+        transition-property: all;
+        transition-timing-function: line;
+    }
+
+    media (max-width: 800px) {
+        .container td:nth-child(4), .container th:nth-child(4)
+
+    {
+        display: none;
+    }
+
+    }
+</style>
+</br>
 <body>
     <form>
         <table border="3px" class="table">
@@ -33,11 +153,13 @@
             @foreach (Movie movie in Model)
             {
                 <tr class="table1">
-                    <td><b>@movie.MovieName</b></td>
+                    <td><b><a href="http://localhost:5277/Movie/View/@movie.Id"><b>@movie.MovieName</b></a></b></td>
                     <td><b>@movie.DirectorName</b></td>
                     <td><b>@movie.ActorName</b></td>
-                    <td> @Html.ActionLink("Edit", "Edit", new { id = movie.Id })
-                         @Html.ActionLink("Delete", "Delete", new { id = movie.Id }) </td>
+                    <td><b> 
+                        @Html.ActionLink("Edit", "Edit", new { id = movie.Id })
+                        @Html.ActionLink("Delete", "Delete", new { id = movie.Id })
+                    </b></td>
                 </tr>
             }
         </table>
