--- a/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearchResult.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearchResult.cshtml
@@ -16,6 +16,7 @@
                 <td><b>Product Name</b></td>
                 <td><b>Brand Name</b></td>
                 <td><b>Price</b></td>
+                <td><b>Color Name</b></td>
                 <td><b>Action</b></td>
             </tr>
 
@@ -25,6 +26,7 @@
                     <td><b>@product.ProductName</b></td>
                     <td><b>@product.BrandName</b></td>
                     <td><b>@product.Price</b></td>
+                    <td><b>@product.ColorName</b></td>
                     <td>
                         <b>
                             @Html.ActionLink("Edit", "Edit", new { id = product.Id }) |
