--- a/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearch.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearch.cshtml
@@ -13,24 +13,38 @@
                     <input type="Text" id="ProductName" name="ProductName" value="jacket" class="form-control" new { required="required" } />
                     <span asp-validation-for="ProductName" class="text-danger"></span>
                 </div>
-                <br />
+                </br>
                 <div class="form-group">
                     <label>Product Color</label>
                     @Html.DropDownListFor(model => model.ColorId, ViewBag.ProductColors as SelectList, "-- Select --", new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.ColorId, "", new { @class = "text-danger" })
                 </div>
-                <br />
+                </br>
                 <div class="form-group">
                     <label> Product Size </label>
                     @Html.DropDownListFor(model => model.SizeId, ViewBag.ProductSizes as SelectList, "-- Select --", new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.SizeId, "", new { @class = "text-danger" })
                 </div>
-                <br />
+                </br>
                 <div class="form-group">
                     <label> Product Fabric </label>
                     @Html.DropDownListFor(model => model.FabricId, ViewBag.ProductFabrics as SelectList, "-- Select --", new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.FabricId, "", new { @class = "text-danger"})
                 </div>
+                </br>
+                <div class="form-group">
+                    <table>
+                        <tr>
+                            <td><label class="control-label">Price</label></td>
+                            <td>
+                                <input type="Text" id="Min" name="Min" class="form-control" new { required="required" } />
+                            </td>
+                            <td>
+                                <input type="Text" id="Max" name="Max" class="form-control" new { required="required" } />
+                            </td>
+                        </tr>
+                    </table>
+                </div>  
                 </br>
                 <div class="form-group">
                     <input type="submit" value="Search" class="btn btn-primary" />
