--- a/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearchResult.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearchResult.cshtml
@@ -12,30 +12,23 @@
 <body>
     <form>
         <table border="3px" class="table">
-            <tr class="table1">
+            <tr>
                 <td><b>Product Name</b></td>
                 <td><b>Brand Name</b></td>
-                <td><b>Price</b></td>
                 <td><b>Color Name</b></td>
-
-                <tb><b>Size Name</b></tb>
-                @*<tb><b>Fabric Name</b></tb>*@
-
+                <td><b>Size Name</b></td>
+                <td><b>Price</b></td>
                 <td><b>Action</b></td>
             </tr>
 
             @foreach (Product product in Model)
             {
-                <tr class="table1">
+                <tr>
                     <td><b>@product.ProductName</b></td>
                     <td><b>@product.BrandName</b></td>
-                    <td><b>@product.Price</b></td>
                     <td><b>@product.ColorName</b></td>
-                    
                     <td><b>@product.SizeName</b></td>
-                    @*<td><b>@product.FabricName</b></td>
-                    *@
-
+                    <td><b>@product.Price</b></td>
                     <td>
                         <b>
                             @Html.ActionLink("Edit", "Edit", new { id = product.Id }) |
