Added two input parameters min and max for product price range

--- a/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearch.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearch.cshtml
@@ -35,12 +35,11 @@
                 <div class="form-group">
                     <table>
                         <tr>
-                            <td><label class="control-label">Price</label></td>
                             <td>
-                                <input type="Text" id="Min" name="Min" class="form-control" new { required="required" } />
+                                Min Price <input type="Text" id="Min" name="MinPrice" class="form-control" new { required="required" } />
                             </td>
                             <td>
-                                <input type="Text" id="Max" name="Max" class="form-control" new { required="required" } />
+                                Max Price <input type="Text" id="Max" name="MaxPrice" class="form-control" new { required="required" } />
                             </td>
                         </tr>
                     </table>
