Added dateofbirth column and remove age column into the customer table in database and in c-sharp also in customer we used temp data instead of view bag for success message

--- a/DotNetCore/MVC/MyWebApp/Views/Customer/Edit.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/Edit.cshtml
@@ -51,8 +51,8 @@
             <label for="Email">Email:</label><br>
             <input type="text" id="Email" name="Email" value="@Model.Email"><br>
 
-            <label for="Age">Age:</label><br>
-            <input type="text" id="Age" name="Age" value="@Model.Age"><br>
+            <label for="DateOfBirth">Date Of Birth:</label><br>
+            <input type="text" id="DateOfBirth" name="DateOfBirth" value="@Model.DateOfBirth"><br>
 
             <label for="Mobile">Mobile:</label><br>
             <input type="text" id="Mobile" name="Mobile" value="@Model.Mobile"><br><br>
