--- a/DotNetCore/MVC/MyWebApp/Views/Customer/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/View.cshtml
@@ -51,8 +51,8 @@
                 <td><a href="http://localhost:5277/Customer/Index">@Model.Email</a></td>
             </tr>
             <tr>
-                <td><b>Age:</b></td>
-                <td>@Model.Age</td>
+                <td><b>DateOfBirth:</b></td>
+                <td>@Model.DateOfBirth</td>
             </tr>
             <tr>
                 <td><b>Mobile:</b></td>
