--- a/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
@@ -26,8 +26,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Customer</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="CustomerSearch">Customer Search</a>
                         </li>
                         
                         <li class="nav-item">
