Added two view page in html customer search optional and cusromer search result optional

--- a/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="CustomerSearchOption">Customer Search Option</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="CustomerSearchOptional">Customer Search Optional</a>
                         </li>
                         
                         <li class="nav-item">
