Added a parameter first name in customer search result optional action

--- a/DotNetCore/MVC/MyWebApp/Views/Customer/CustomerSearchOptional.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/CustomerSearchOptional.cshtml
@@ -10,13 +10,13 @@
                 @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
                 <div class="form-group">
                     <label class="control-lable"> <b>First Name</b> </label>
-                    <input type="text" id="FirstName" name="FirstName" class="form-control" new { required="required" } />
+                    <input type="text" id="FirstName" name="FirstName" class="form-control" />
                     <span asp-validation-for="FirstName" class="text-danger"></span>
                 </div>
                 </br>
                 <div class="form-group">
                     <label class="control-lable"> <b>Last Name</b> </label>
-                    <input type="text" id="lastName" name="lastName" class="form-control" new { required="required" } />
+                    <input type="text" id="lastName" name="lastName" class="form-control" />
                     <span asp-validation-for="LastName" class="text-danger"></span>
                 </div>
                 </br>
