--- a/DotNetCore/MVC/MyWebApp/Views/Customer/Edit.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyWebApp.Models.Customer
+﻿@model MyWebApp.Models.CustomerVm
 
 @{
     ViewData["Title"] = "Customer Edit";
@@ -57,8 +57,8 @@
             <label for="Mobile">Mobile:</label><br>
             <input type="text" id="Mobile" name="Mobile" value="@Model.Mobile"><br><br>
 
-            <input type="submit" value="Update">
-            <input type="Cancel">
+            <input type="submit" value="Update" class="btn btn-primary" />
+            <input type="submit" value="Cancel" class="btn btn-primary" />
         </form>
 
     </table>
