Added separate data model for method in repository layer and used with auto mapper in customer controller and changed model folder name

--- a/DotNetCore/MVC/MyWebApp/Views/Customer/CustomerSearchResult.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/CustomerSearchResult.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyWebApp.Models.CustomerSearchVm>
+﻿@model List<MyWebApp.ViewModels.CustomerSearchVm>
 
 @{
     ViewData["Title"] = "CustomerSearchResult";
