--- a/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearchResult.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearchResult.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyWebApp.Models.Product>
+﻿@model List<MyWebApp.ViewModels.Product>
 
 @{
     ViewData["Title"] = "ProductSearchResult";
