Added separate Data model movie and actors for repository layer and used with auto mapper in movie controller

--- a/DotNetCore/MVC/MyWebApp/Views/Customer/CustomerSearchResult.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/CustomerSearchResult.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyWebApp.ViewModels.CustomerSearchVm>
+﻿@model List<CustomerSearchVm>
 
 @{
     ViewData["Title"] = "CustomerSearchResult";
