--- a/DotNetCore/MVC/MyWebApp/Views/Customer/CustomerSearchResultOptional.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/CustomerSearchResultOptional.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyWebApp.ViewModels.CustomerSearchOptionalVm>
+﻿@model List<CustomerSearchOptionalVm>
 
 @{
     ViewData["Title"] = "CustomerSearchResultOptional";
