Added a separate folder products in viewmodel and created again index view

--- a/DotNetCore/MVC/MyWebApp/Views/Product/Add.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyWebApp.ViewModels.Product
+﻿@model MyWebApp.ViewModels.Products.ProductAddVm
 
 @{
     ViewData["Title"] = "Add";
@@ -32,13 +32,13 @@
             </div>
             <br/>
             <div class="form-group">
-                <label for="Product Size">Product Size</label>
+                <label for="ProductId">Product Size</label>
                 @Html.DropDownListFor(model => model.SizeId, ViewBag.ProductSizes as SelectList, "-- Select --", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SizeId, "", new { @class = "text-danger" })
             </div>
             <br/>
             <div class="form-group">
-                <label for="Product Color">Product Color</label>
+                <label for="ProductId">Product Color</label>
                 @Html.DropDownListFor(model => model.ColorId, ViewBag.ProductColors as SelectList, "-- Select --", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ColorId, "", new { @class = "text-danger" })
             </div>
@@ -49,13 +49,13 @@
                 <span asp-validation-for="Fit" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FabricName" class="control-label">Fabric Name</label>
+                <label asp-for="FabricId" class="control-label">Fabric Name</label>
                 @Html.DropDownListFor(model => model.FabricId, ViewBag.ProductFabrics as SelectList, "-- Select --", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FabricId, "", new { @class = "text-danger" })
             </div>
             <br/>
             <div class="form-group">
-                <label asp-for="CategoryName" class="control-label">Category Name</label>
+                <label asp-for="CategoryId" class="control-label">Category Name</label>
                 @Html.DropDownListFor(model => model.CategoryId, ViewBag.ProductCategories as SelectList, "-- Select --", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
             </div>
