--- a/DotNetCore/MVC/MyWebApp/Views/Product/Index.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyWebApp.ViewModels.Product>
+﻿@model List<MyWebApp.ViewModels.Products.ProductVm>
 
 @{
     ViewData["Title"] = "Index";
@@ -8,15 +8,12 @@
 <head>
     <title>Product Table</title>
 </head>
-<br/>
-<h1><span class="blue">&lt;</span>Product<span class="blue">&gt;</span> <span class="yellow">Table</pan></h1>
 <br />
-<span class="text-success"> <b> @ViewBag.SuccessMessageForAdd </b> </span>
-<br />
-<span class="text-success"> <b> @ViewBag.SuccessMessageForUpdate </b> </span>
-<br/>
-<br />
-<span class="text-success"> <b> @ViewBag.SuccessMessageForDelete </b> </span>
+<span class="text-success"> <b> @TempData["SuccessMessageForAdd"] </b> </span>
+
+<span class="text-success"> <b> @TempData["SuccessMessageForUpdate"] </b> </span>
+
+<span class="text-success"> <b> @TempData["SuccessMessageForDelete"] </b> </span>
 <br />
 <div>
     <b><b><a href="http://localhost:5277/Product/Add"> Add </a></b></b>
@@ -24,125 +21,6 @@
 <br/>
 <b><label>Total Product:</label>  @ViewBag.productCount</b>
 <br/>
-
-<style>
-    body {
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 300;
-        line-height: 1.42em;
-        color: #A7A1AE;
-        background-color: aliceblue;
-    }
-
-    h1 {
-        font-size: 3em;
-        font-weight: 300;
-        line-height: 1em;
-        text-align: center;
-        color: #4DC3FA;
-    }
-
-    h2 {
-        font-size: 1em;
-        font-weight: 300;
-        text-align: center;
-        display: block;
-        line-height: 1em;
-        padding-bottom: 2em;
-        color: #FB667A;
-    }
-
-        h2 a {
-            font-weight: 700;
-            text-transform: uppercase;
-            color: #FB667A;
-            text-decoration: none;
-        }
-
-    .blue {
-        color: #185875;
-    }
-
-    .yellow {
-        color: #FFF842;
-    }
-
-    .container th h1 {
-        font-weight: bold;
-        font-size: 1em;
-        text-align: left;
-        color: #185875;
-    }
-
-    .container td {
-        font-weight: normal;
-        font-size: 1em;
-        -webkit-box-shadow: 0 2px 2px -2px #0E1119;
-        -moz-box-shadow: 0 2px 2px -2px #0E1119;
-        box-shadow: 0 2px 2px -2px #0E1119;
-    }
-
-    .container {
-        text-align: left;
-        overflow: hidden;
-        width: 80%;
-        margin: 0 auto;
-        display: table;
-        padding: 0 0 8em 0;
-    }
-
-        .container td, .container th {
-            padding-bottom: 2%;
-            padding-top: 2%;
-            padding-left: 2%;
-        }
-
-    / Background-color of the odd rows /
-    .container tr:nth-child(odd) {
-        background-color: aliceblue;
-    }
-
-    / Background-color of the even rows /
-    .container tr:nth-child(even) {
-        background-color: aliceblue;
-    }
-
-    .container th {
-        background-color: aliceblue;
-    }
-
-    .container td:first-child {
-        color: #FB667A;
-    }
-
-    .container tr:hover {
-        background-color: aliceblue;
-        -webkit-box-shadow: 0 6px 6px -6px #0E1119;
-        -moz-box-shadow: 0 6px 6px -6px #0E1119;
-        box-shadow: 0 6px 6px -6px #0E1119;
-    }
-
-    .container td:hover {
-        background-color: #FFF842;
-        color: #403E10;
-        font-weight: bold;
-        box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
-        transform: translate3d(6px, -6px, 0);
-        transition-delay: 0s;
-        transition-duration: 0.4s;
-        transition-property: all;
-        transition-timing-function: line;
-    }
-
-    media (max-width: 800px) {
-        .container td:nth-child(4), .container th:nth-child(4)
-
-    {
-        display: none;
-    }
-
-    }
-</style>
 
 <body>
     <form>
@@ -160,21 +38,22 @@
                 <td><b>Action</b></td>
             </tr>
 
-            @foreach (Product product in Model)
+            @foreach (MyWebApp.ViewModels.Products.ProductVm productVm in Model)
             {
                 <tr class="table1">
-                    <td><b><a href="http://localhost:5277/Product/View/@product.Id"><b>@product.ProductName</b></a></b></td>
-                    <td><b>@product.BrandName</b></td>
-                    <td><b>@product.SizeName</b></td>
-                    <td><b>@product.ColorName</b></td>
-                    <td><b>@product.Fit</b></td>
-                    <td><b>@product.FabricName</b></td>
-                    <td><b>@product.CategoryName</b></td>
-                    <td><b>@product.Discount</b></td>
-                    <td><b>@product.Price</b></td>
+                    <td><b><a href="http://localhost:5277/Product/View/@productVm.Id"><b>@productVm.ProductName</b></a></b></td>
+                    <td><b>@productVm.BrandName</b></td>
+                    <td><b>@productVm.SizeName</b></td>
+                    <td><b>@productVm.ColorName</b></td>
+                    <td><b>@productVm.Fit</b></td>
+                    <td><b>@productVm.FabricName</b></td>
+                    <td><b>@productVm.CategoryName</b></td>
+                    <td><b>@productVm.Discount</b></td>
+                    <td><b>@productVm.Price</b></td>
                     <td>
-                        <b>@Html.ActionLink("Edit", "Edit", new { id = product.Id }) |
-                           @Html.ActionLink("Delete", "Delete", new { id = product.Id })
+                        <b>
+                            @Html.ActionLink("Edit", "Edit", new { id = productVm.Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = productVm.Id })
                         </b>
                     </td>
                 </tr>
