Added a view product search result and in product search result action we used viewmodel instead of datamodel as an input parameter

--- a/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearch.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearch.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyWebApp.ViewModels.Products.ProductVm
+﻿@model MyWebApp.ViewModels.Products.ProductFilterVm
 
 <div>
     <h4>Product</h4>
@@ -36,10 +36,10 @@
                     <table>
                         <tr>
                             <td>
-                                Min Price <input type="Text" id="Min" name="MinPrice" class="form-control" new { required="required" } />
+                                Min Price <input type="Text" id="Min" name="Min" class="form-control" new { required="required" } />
                             </td>
                             <td>
-                                Max Price <input type="Text" id="Max" name="MaxPrice" class="form-control" new { required="required" } />
+                                Max Price <input type="Text" id="Max" name="Max" class="form-control" new { required="required" } />
                             </td>
                         </tr>
                     </table>
